--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,32 @@
 language: cpp
-compiler:
-  - clang
-  - gcc
+sudo: required
+dist: trusty
 
-addons:
-  apt:
-    sources:
-    # add PPAs with more up-to-date toolchains
-    - ubuntu-toolchain-r-test
-    packages:
-    # install toolchains
-    - gcc-7
-    - g++-7
+matrix:
+  include:
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-7']
+      env:
+        - COMPILER=g++-7
+        - COMP=gcc
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-5.0']
+          packages: ['clang-5.0', 'llvm-5.0-dev']
+      env:
+        - COMPILER=clang++-5.0
+        - COMP=clang
 
 
 before_install:
+  - gcc --version
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install qtbase5-dev
