--- a/.travis.yml
+++ b/.travis.yml
@@ -26,12 +26,13 @@ matrix:
 
 
 before_install:
-  - gcc --version
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install qtbase5-dev
   - sudo apt-get install qt5-default qttools5-dev-tools
 
 script:
+  - echo `gcc --version`
+  - echo `qmake --version`
   - qmake KoncludeWithoutRedland.pro
   - make
