--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ before_install:
   
 install:
   # C++17
-  - if [[ "$OS" == "linux" ]]; then sudo add-apt-repository -y ppa:beineri/opt-qt-5.12.3-xenial; fi
-  - if [[ "$OS" == "linux" ]]; then sudo apt-get -qy update; fi
-  - if [[ "$OS" == "linux" ]]; then sudo apt-get install -qq g++-7 gcc-7; fi
-  - if [[ "$OS" == "linux" ]]; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90; fi
-  - if [[ "$OS" == "linux" ]]; then sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 90; fi  
+  - sudo add-apt-repository -y ppa:beineri/opt-qt-5.12.3-xenial
+  - sudo apt-get -qy update
+  - sudo apt-get install -qq g++-7 gcc-7
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 90 
 
 script:
   - echo `gcc --version`
