--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ install:
   - sudo apt-get install -qq g++-7 gcc-7
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 90 
+  - export QMAKE=/opt/qt512/bin/qmake
+  - export PATH=/opt/qt512/bin/:$PATH
 
 script:
   - echo `gcc --version`
