--- a/.travis.yml
+++ b/.travis.yml
@@ -18,18 +18,21 @@ matrix:
 
 
 before_install:
+  - sudo add-apt-repository ppa:beineri/opt-qt593-trusty
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  - sudo apt-get update -qq
-  
-install:
-  # C++17
+  - sudo apt-get install qtbase5-dev
+  - sudo apt-get install qt5-default qttools5-dev-tools  
   - sudo add-apt-repository -y ppa:beineri/opt-qt-5.12.3-xenial
-  - sudo apt-get -qy update
+  - sudo apt-get update -qq
+  - sudo apt-get -qy update  
+  - sudo apt-get update
   - sudo apt-get install -qq g++-7 gcc-7
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 90 
   - export QMAKE=/opt/qt512/bin/qmake
   - export PATH=/opt/qt512/bin/:$PATH
+
+
 
 script:
   - echo `gcc --version`
