--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
 before_install:
   - sudo add-apt-repository --yes ppa:beineri/opt-qt593-trusty
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  - sudo add-apt-repository -yes ppa:beineri/opt-qt-5.12.3-xenial  
+  - sudo add-apt-repository --yes ppa:beineri/opt-qt-5.12.3-xenial  
   - sudo apt-get update -qq
   - sudo apt-get -qy update  
   - sudo apt-get update  
