--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
 
 
 before_install:
-  - sudo add-apt-repository --yes ppa:beineri/opt-qt593-trusty
+  - sudo add-apt-repository ppa:beineri/opt-qt592-trusty -y
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get -qy update  
   - sudo apt-get install -qq qtbase5-dev
