--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,84 @@
-language: cpp
-sudo: required
-dist: trusty
+language: generic # prevent travis from overriding provided compilers.
+cache:
+  ccache: true    # includes $HOME/.ccache and adds /usr/lib/ccache to $PATH
+# directories:
+#   - 3rd_party   # this is sometimes breaking subsequent Travis builds
+dist: xenial
+
+notifications:
+  email: false
+  webhooks: https://segs.io/travis/travis-ci.php
+    
+env:
+  global:
+    # Ubuntu version
+    - LINUX_DIST=trusty
+    - DEPS_DIR=${TRAVIS_BUILD_DIR}/deps
+    # Global build options and C++ flags
+    - CXX_FLAGS="-Wall -pedantic"
+    - CCACHE_TEMPDIR=/tmp/.ccache-temp
+    - CCACHE_COMPRESS=1
+    - CASHER_TIME_OUT=1000
+    - QT=511
+    
+addons_shortcuts:
+  addons_clang50: &clang50
+    apt:
+      sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-5.0']
+      packages: [ 'clang-5.0', 'clang-tidy-5.0' ]
+  addons_gcc5: &gcc5
+    apt:
+      sources: [ 'ubuntu-toolchain-r-test' ]
+      packages: [ 'g++-5', 'gcc-5' ]
+  addons_gcc6: &gcc6
+    apt:
+      sources: [ 'ubuntu-toolchain-r-test' ]
+      packages: [ 'g++-6', 'gcc-6' ]
+  addons_gcc7: &gcc7
+    apt:
+      sources: [ 'ubuntu-toolchain-r-test' ]
+      packages: [ 'g++-7', 'gcc-7' ]
 
 matrix:
   include:
     - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-7']
-      env:
-        - COMPILER=g++-7
-        - COMP=gcc
-        - OS=linux
-
+      compiler: "gcc-7"
+      env: BUILD='Debug' CC=gcc-7 CXX=g++-7
+      addons: *gcc7
+    - os: osx
+      osx_image: xcode9.2
+      compiler: clang
+      env: BUILD='Debug'
 
 before_install:
-  - sudo add-apt-repository ppa:beineri/opt-qt592-trusty -y
-  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  - sudo apt-get -qy update  
-  - sudo apt-get install -qq qtbase5-dev
-  - sudo apt-get install -qq qt5-default qttools5-dev-tools 
-  - sudo apt-get install -qq g++-7 gcc-7
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 90 
-  - export QMAKE=/opt/qt512/bin/qmake
-  - export PATH=/opt/qt512/bin/:$PATH
-
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository ppa:beineri/opt-qt-5.12.2-xenial -y; fi
+  - |
+    if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+      sudo apt-get update -qq;
+    else
+      brew update;
+    fi
+#  - if [ -n "$CLANG_VERSION" ]; then sudo PATH="${PATH}" CXX="$CXX" CC="$CC" ./ci_support/install_libcxx.sh; fi
+  
+  
+install:
+#  - |
+#    if [ "$LIBCXX" == "On" ]; then
+#      CXX_FLAGS="${CXX_FLAGS} -stdlib=libc++ -nostdinc++ -cxx-isystem /usr/include/c++/v1/ -Wno-unused-command-line-argument";
+#      CXX_LINKER_FLAGS="${CXX_LINKER_FLAGS} -lc++abi";
+#    fi
+  - |
+    if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+      sudo apt-get install -qq libgl1-mesa-dev qt512base qt512declarative qt512websockets qt512quickcontrols2; source /opt/qt512/bin/qt512-env.sh;
+      CMAKE_OPTS="";
+    else
+      brew install cppcheck qt;
+      brew link --force qt;
+      export PATH="/usr/local/opt/qt/bin:$PATH" # missing mkspecs fix
+      QT5_CMAKE_PREFIX=$(ls -d $(brew --cellar)/qt/*/lib/cmake);
+      CMAKE_OPTS="-DCMAKE_PREFIX_PATH=${QT5_CMAKE_PREFIX}";
+    fi
+    export CMAKE_OPTS;  
 
 
 script:
