--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         
       - name: Prepare
         run: |
-          sudo add-apt-repository ppa:beineri/opt-qt-5.12.2-xenial -y; fi
+          sudo add-apt-repository ppa:beineri/opt-qt-5.12.2-xenial -y
           sudo apt-get update -qq;
           
       - name: Install
