--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         config:        
         - {
-            name: "Ubuntu Latest GCC", artifact: "Linux.tar.xz",
+            name: "Ubuntu 16.04 GCC", artifact: "Linux.tar.xz",
             os: ubuntu-16.04,
             build_type: "Release", cc: "gcc", cxx: "g++"
           }
@@ -32,6 +32,7 @@ jobs:
       - name: Install
         run: |
           sudo apt-get install -qq libgl1-mesa-dev qt512base; source /opt/qt512/bin/qt512-env.sh;
+          echo "installation finished"
           CMAKE_OPTS="";       
           export CMAKE_OPTS;
           
