--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,10 @@ jobs:
           echo `qmake --version`
           qmake KoncludeWithoutRedland.pro
           make -j 2                 
+
+      - name: Add msbuild to PATH        
+        if: startsWith(matrix.config.os, 'windows')        
+        uses: microsoft/setup-msbuild@v1.0.2
           
       - name: Compile Windows
         if: startsWith(matrix.config.os, 'windows')
