--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
         if: startsWith(matrix.config.os, 'windows')
         run: |
           qmake KoncludeWithoutRedland.pro
-          nmake -j 2
+          nmake
 
       - name: Run Examples
         if: startsWith(matrix.config.os, 'ubuntu')  
