--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,17 @@ addons_shortcuts:
     apt:
       sources: [ 'ubuntu-toolchain-r-test' ]
       packages: [ 'g++-7', 'gcc-7' ]
+  addons_gcc9: &gcc9
+    apt:
+      sources: [ 'ubuntu-toolchain-r-test' ]
+      packages: [ 'g++-9', 'gcc-9' ]
 
 matrix:
   include:
     - os: linux
-      compiler: "gcc-7"
-      env: BUILD='Release' CC=gcc-7 CXX=g++-7
-      addons: *gcc7
+      compiler: "gcc-9"
+      env: BUILD='Release' CC=gcc-9 CXX=g++-9
+      addons: *gcc9
     - os: osx
       osx_image: xcode11.2
       compiler: clang
