--- a/.github/workflows/build-release-with-redland.yml
+++ b/.github/workflows/build-release-with-redland.yml
@@ -245,7 +245,10 @@ jobs:
     
       - name: Install Dependencies
         run: |          
-          brew install autoconf automake libtool gtk-doc bison mpfr libgcrypt libiconv 
+          brew install autoconf automake libtool gtk-doc mpfr libgcrypt libiconv 
+          # new bison (https://ghcr.io/v2/homebrew/core/bison/manifests/3.7.6-1) causes error for building rasqal: /Applications/Xcode_12.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/share/bison/skeletons/bison.m4: No such file or directory
+          brew install https://homebrew.bintray.com/bottles/bison-3.7.6.catalina.bottle.tar.gz
+          
                  
       - name: Prepare Environment
         run: |
