--- a/.github/workflows/build-release-with-redland.yml
+++ b/.github/workflows/build-release-with-redland.yml
@@ -244,7 +244,7 @@ jobs:
         run: |          
           brew install autoconf automake libtool gtk-doc mpfr libgcrypt libiconv 
           # new bison (https://ghcr.io/v2/homebrew/core/bison/manifests/3.7.6-1) causes error for building rasqal: /Applications/Xcode_12.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/share/bison/skeletons/bison.m4: No such file or directory
-          brew install https://homebrew.bintray.com/bottles/bison-3.7.6.catalina.bottle.tar.gz
+          brew install bison@3.7.6
           
                  
       - name: Prepare Environment
