--- a/.github/workflows/build-release-with-redland.yml
+++ b/.github/workflows/build-release-with-redland.yml
@@ -244,7 +244,7 @@ jobs:
         run: |          
           brew install autoconf automake libtool gtk-doc mpfr libgcrypt libiconv 
           # new bison (https://ghcr.io/v2/homebrew/core/bison/manifests/3.7.6-1) causes error for building rasqal: /Applications/Xcode_12.4.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/share/bison/skeletons/bison.m4: No such file or directory
-          brew install bison@3.7.6
+          brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/11d3369762a7eccf2349eefc732ffe183cb0ba13/Formula/bison.rb
           
                  
       - name: Prepare Environment
